libexif-0.6.x:
  * Updated translations: nl, pl, sk
  * Added some example programs
  * libexif is now thread safe when the underlying C library is thread safe
    and when each object allocated by libexif isn't used by more than one
    thread simultaneously
  * Expanded the Doxygen API documentation
  * Fixed an Olympus MakerNote interpretation

libexif-0.6.17 (2008-11-06):
  * Updated translations: cs, de, pl, sk, vi
  * New translations: nl, sv, en_CA
  * Bug fixes: #1773810, #1774626, #1536244, CVE-2007-6351, CVE-2007-6352,
    #2071600 and others
  * Enhanced support of Canon and Olympus makernotes 
  * Added support for Fuji and Sanyo makernotes
  * Added support for the NO_VERBOSE_TAG_STRINGS and NO_VERBOSE_TAG_DATA
    macros to reduce size for embedded applications
  * Added support for more tags


libexif-0.6.16 (2007-06-12):
  * Security fix: CVE-2006-4168 aka IDEF1514.
  * Updated translations: cz, pl, vi


New in 0.6.15 (2007-05-23) since 0.6.14 (2007-05-10):

  * Added support for 2 new types of Pentax makernotes & Casio type2 makernote

  * Added support for Win XP metadata (Author, Comment, KeyWords, Title,
    Subject) tags

  * Bug fixes:
    [ 1443183 ] install error when doxygen is not present.

  * New translations: Czech, Slovak.

  * Improved doxygen generated API and code internals
    documentation. Made building of code internals docs optional
    (--enable-internal-docs) as the call graphs take quite long to
    build. Made building any docs optional (--disable-docs).


New in 0.6.14 (2007-05-10) since 0.6.13 (2005-12-27):

  * Bug fixes: #1457501, #1471060, #1525770, #1617991, #1703284, #1716196

  * Extended support of Canon, Nikon, Olympus makernotes

  * Added option EXIF_DATA_OPTION_DONT_CHANGE_MAKER_NOTE to prevent
    modification of maker notes

  * Other fixes and improvements which include API/ABI additions.


New in 0.6.13 (2005-12-27) since 0.6.12 (2005-03-13):

  * Bug fixes: #803191, #1051994, #1054321, #1054323, #1196787